--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Red Hat Mono', monospace;
 }
 
 body {
@@ -19,12 +20,13 @@ body {
 }
 
 .content-wrapper {
+    width: 100%;
     margin-top: 200px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border: 1px red solid;
+    border: 1px solid red;
 }
 
 .submit-button {
@@ -49,18 +51,16 @@ body {
 }
 
 .fire {
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -25%);
-    height: 20vw;
-    width: 20vw;
+    height: 300px;
+    width: 300px;
+    margin-top: 150px;
+    display: flex;
   }
 .fire .flames {
     position: absolute;
-
     left: 50%;
-    width: 60%;
-    height: 60%;
+    width: 100px;
+    height: 100px;
     transform: translateX(-50%) rotate(45deg);
   }
   body .fire .flames .flame {
@@ -97,28 +97,30 @@ body {
             animation-delay: 1.125s;
   }
   .logs {
-    position: fixed;
-    
-    bottom: 25%;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 100%;
-    height: 15%;
-  }
-  body .fire .logs:before, body .fire .logs:after {
     position: absolute;
-    content: "";
-    top: 50%;
+    width: 300px;
+    height: 50px;
+    background: white;
     left: 50%;
-    transform: translate(-50%, -50%) rotate(20deg);
-    height: 100%;
-    width: 100%;
-    border-radius: 1vw;
-    background-color: #70392F;
+    border-radius: 7px;
+    
+
   }
-  body .fire .logs:before {
-    transform: translate(-50%, -50%) rotate(-20deg);
-    background-color: #612E25;
+  .log1{
+    transform: translateX(-50%) translateY(100px) rotate(20deg);
+    background-color: #612e25;
+  }
+
+  .log2{
+    transform: translateX(-50%) translateY(100px) rotate(-20deg);
+    background-color: #70392f;
+  }
+
+  .latin {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%) translateY(200px);
+    color: #FAE1DF;
   }
   
   @-webkit-keyframes flameodd {
