--- a/style.css
+++ b/style.css
@@ -17,6 +17,14 @@ body {
     z-index: 9999;
     text-align: center;
     font-size: 2em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Advent Pro', sans-serif;
+}
+
+.title {
+  font-family: 'Advent Pro', sans-serif;
 }
 
 .content-wrapper {
@@ -26,13 +34,23 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border: 1px solid red;
 }
 
-.submit-button {
-    background: #FDA900;
-    width: 100px;
-    height: 50px;
+input {
+  background-color: #9EA3B0;
+  border: none;
+  height: 30px;
+  width: 300px;
+  margin-top: 15px;
+}
+
+button {
+  background-color: #FDA900;
+  width: 75px;
+  padding: 10px;
+  border: none;
+  border-radius: 4px;
+  margin-top: 15px;
 }
 
 .password-wrapper {
@@ -44,6 +62,7 @@ body {
     width: 400px;
     border-radius: 15px;
     background: #FAE1DF;
+    
 }
 
 .hint {
